--- a/EQ/EQ-Info.plist
+++ b/EQ/EQ-Info.plist
@@ -14,7 +14,7 @@
 		<string>icon.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.excelenciaquimica.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.excelenciaquimica.eq</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
